# exo

./: .env.example  .env.production.example  .gitignore  DEPLOY.md  DEPLOYMENT_GUIDE_RU.md  Makefile  USER_GUIDE_RU.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  rls.py  telemetry.py
backend/app/models/: __init__.py  agent_message.py  agent_persona.py  ai_request_log.py  audit_log.py  base.py  behavioral_event.py  calendar_integration.py  capture_record.py  client_kernel_profile.py  command.py  commitment_deposit.py  day_plan.py  decision_object.py  energy_score.py  entity_session.py  execution_session.py  governance.py  habit.py  memory_object.py  onboarding_question.py  onboarding_session.py  outcome_object.py  planning_goal.py  policy_kernel.py  (+14 more)
backend/tests/: conftest.py  test_admin_api.py  test_agents_api.py  test_ai_api.py  test_ai_client_ollama.py  test_ai_router.py  test_brief_api.py  test_calendar_sync.py  test_config_service.py  test_cron_tasks.py  test_deposit_api.py  test_deposit_service.py  test_energy_api.py  test_energy_engine.py  test_fsm.py  test_governance_api.py  test_health.py  test_ical_adapter.py  test_models.py  test_modes_api.py  test_morning_brief_service.py  test_onboarding_api.py  test_onboarding_service.py  test_pipeline_e2e.py  test_pipeline_perf.py  test_planning_api.py  test_planning_service.py  test_production_hardening.py  test_reviews_history.py  test_secretary_api.py  test_secretary_service.py  test_steps_list.py  test_stripe_service.py  test_stripe_tasks.py  test_stripe_webhook.py  test_subscription_service.py  test_subscriptions_api.py  test_system_config_api.py  test_team_api.py  test_telegram_api.py  (+2 more)
(+200 files in other folders)
