[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exocortex-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Cache / Queue
    "redis[hiredis]>=5.0.0",
    "arq>=0.25.0",

    # Resilience
    "tenacity>=8.2.0",

    # Error monitoring
    "sentry-sdk[fastapi]>=2.0.0",

    # Observability
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",

    # Logging
    "structlog>=24.1.0",

    # AI
    "litellm>=1.40.0",

    # Utils
    "python-multipart>=0.0.9",

    # Stripe payments
    "stripe>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
omit = ["app/models/migrations/*", "*/tests/*"]
